[package]
# Renamed from `lamquant-core` during 8-repo Unix decomposition (Phase 2).
# Library name `lamquant_core` kept stable to avoid touching every `use`
# site across 19 Rust + 22 Python files; the lib rename is a follow-up
# pass scheduled after the codec is in its own repo.
name = "lamquant-lml"
version = "0.9.3"
edition = "2021"
rust-version = "1.81"
description = "LamQuant LML — lossless EEG/biosignal codec (Le Gall 5/3 + LPC + Golomb), archives, NWB/HDF5 export, no_std/MCU-capable. Ships the `lml` CLI/TUI."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Quitetall/LamQuant-Lossless"
homepage = "https://github.com/Quitetall/LamQuant-Lossless"
readme = "README.md"
categories = ["compression", "science"]
keywords = ["eeg", "lossless", "codec", "medical", "neuroscience"]
build = "build.rs"

[lib]
name = "lamquant_core"
# rlib for firmware/host/test consumers; cdylib so maturin emits the
# `lamquant_core` Python extension (.so). Current maturin does NOT
# auto-inject cdylib (the old assumption was stale → it built an empty
# wheel with no .so), so declare it explicitly. cdylib is an additive
# output: the default rlib build (firmware, no python feature) is
# unaffected; the .so is only produced when maturin/--crate-type asks.
crate-type = ["rlib"]

[dev-dependencies]
# Used by integration tests that need scratch dirs / spawn the lml binary.
tempfile = "3"
lamquant-ops = { version = "0.1.0", path = "../../crates/lamquant-ops" }
# tests/cr_regression.rs parses tests/cr_baselines.json. Listed here
# unconditionally so it's available regardless of which features the
# host build enables.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# End-to-end codec throughput benchmarks. `html_reports` keeps the
# HTML viewer for `target/criterion/` artifacts; `cargo_bench_support`
# allows `cargo bench --bench codec` invocation.
criterion = { version = "0.5", features = ["html_reports", "cargo_bench_support"] }
# Snapshot tests for wire-format lockdown. Used by tests/snapshot/*.rs
# to freeze LMA manifest bytes + LML header layout. Regenerate
# snapshots via `cargo insta review` after an intentional format bump.
# Added 2026-05-21 (Cat A crate adoption — A2).
insta = { version = "1", features = ["yaml"] }
# Property-based tests for `decode(encode(x)) == x` invariants.
# Cat A — A4. Harness lives under tests/property/.
proptest = "1"
# Cat B comparators (2026-05-22) — host-side libs evaluated as
# future hot-path candidates. Dev-deps so they never enter a
# release binary; only `cargo test --features host` + the dedicated
# smoke harness `tests/cat_b_smoke.rs` exercise them.
pulp = "0.21"
realfft = "3"
# idsp's i32 DirectForm1 biquad benched vs a self-contained
# hand-rolled DF1 in `benches/cat_b_compare.rs`.
idsp = "0.21"
dsp-process = "0.2"
dsp-fixedpoint = "0.1"
# Concurrency model checker — exercises Arc/Mutex/atomic interleavings.
# No production use today; smoke verifies the harness is wired.
loom = "0.7"
# Zero-copy mmap'd archive. Watch-list per docs/changes/2026-05-22-
# cat-b-integration.md ("trigger-conditional"). Smoke validates the
# serialize/deserialize roundtrip works for our test envelope.
rkyv = { version = "0.7", default-features = false, features = ["alloc", "validation", "size_32"] }
# Single source of truth for bit-level streams (preferred over bitvec
# per the original audit). Smoke writes 5 bits in, reads them back.
bitstream-io = "4"
# Pure-Rust dense linear algebra. Smoke does a 4×4 multiply to verify
# the matrix construct/index API. Watch-list — no current dense
# linalg in scope.
faer = "0.22"

[[bench]]
name = "codec"
harness = false
required-features = ["host"]

# Cat B empirical comparison bench (2026-05-22). Run via:
#   cargo bench --features "host experimental_arithmetic" \
#     -p lamquant-core --bench cat_b_compare
# constriction-rANS variant only present when `experimental_arithmetic`
# is enabled — without it the bench falls back to golomb-rice-only.
[[bench]]
name = "cat_b_compare"
harness = false
required-features = ["host"]

[[bin]]
name = "lml"
path = "src/bin/lml.rs"
required-features = ["host"]

# `lamquant` umbrella binary moved to meta-repo /lamquant/ crate per
# ADR 0026 (W2 phase A.6). LamQuant-Lossless now ships ONLY the lml
# bin + lossless codec lib. Install the umbrella via
# `cargo install --path /path/to/LamQuant/lamquant`.

[features]
# Default = full host build (CLI, TUI, file I/O, security).
default = ["host"]

# ── Level 0: no_std DSP core (firmware / embedded) ──────────────────────────
# The codec core now lives in `lamquant-lossless-core`; `std` turns on its
# host-side encode helpers (f64 RD search, std::io sinks). Firmware depends on
# `lamquant-lossless-core` DIRECTLY (not this facade), so this is the host path.
std = ["lamquant-lossless-core/std"]

# ── Level 1: archive — file I/O + LMA/EDF/container r/w ────────────────────
# Enables: lma, container, edf, io, offset_table, range, stream, source,
#          codec_stages, pipeline, backend::Desktop (rayon parallel path).
# Use this for OS plugins and 3rd-party readers (e.g. lml-os/lmafs).
archive = [
    "std",
    # Enables the core's rayon parallel (Desktop) encode/decode path.
    "lamquant-lossless-core/archive",
    # Desktop ships the LMO encoder as standard (ADR 0052). `encode` pulls
    # core's `archive` RD search, already enabled on this line.
    "lamquant-optimum/encode",
    "lamquant-common/host",
    "base64/std",
    "sha2/std",
    "dep:serde",
    "dep:serde_json",
    "dep:rayon",
    "dep:walkdir",
    "dep:zstd",
    "dep:globset",
    "dep:tempfile",
    "dep:filetime",
]

# ── Level 2: cli — archive + command-line interface ──────────────────────────
# Enables: clap, shell completions, man pages, progress bars, structured
#          logging. Use this for scripting or embedding lml operations without
#          the interactive TUI.
cli = [
    "archive",
    "dep:clap",
    "dep:clap_complete",
    "dep:clap_mangen",
    "dep:indicatif",
    "dep:tracing",
    "dep:tracing-subscriber",
]

# ── Level 3: tui — cli + interactive TUI panels ──────────────────────────────
# Enables: ratatui widget stack, IPC event bus (lamquant-ops), user history,
#          PCCP YAML registry parsing.
tui = [
    "cli",
    "dep:ratatui",
    "dep:crossterm",
    "dep:serde_yaml",
    "dep:lamquant-ops",
    "dep:lamquant-history",
    "dep:throbber-widgets-tui",
    "dep:ratatui-textarea",
    "dep:tui-big-text",
    "dep:tui-scrollview",
    "dep:tui-tree-widget",
    "dep:tui-widget-list",
    "dep:tui-piechart",
]

# ── security — archive + encryption / signing primitives ────────────────────
# Enables: lml encrypt, lml decrypt, lml sign, lml verify-signature.
# RustCrypto crates — pure-Rust, no system deps.
security = [
    "archive",
    "dep:aes-gcm",
    "dep:hmac",
    "dep:zeroize",
    "dep:argon2",
    "dep:rpassword",
    "dep:getrandom",
]

# ── host: full lml CLI + TUI + security (backward-compat alias) ─────────────
# Enables everything. cargo install lamquant-lml gives you lml with all
# subcommands including encrypt/sign and the interactive TUI.
host = ["tui", "security"]

# ── Optional heavy extensions ────────────────────────────────────────────────
# Phase 6 — async + network. tokio + reqwest + notify filesystem watcher.
async = ["host", "dep:tokio", "dep:reqwest", "dep:notify"]
# Phase 7.3 — OS keyring. libdbus+libsecret on Linux, native APIs elsewhere.
keyring = ["host", "dep:keyring"]
# Phase 5.4 — Parquet export. Arrow/parquet stack (~50 crates).
parquet = ["host", "dep:parquet", "dep:arrow-array", "dep:arrow-schema"]
# Phase 5.6 — HDF5 export. Requires libhdf5 system headers.
hdf5 = ["host", "dep:hdf5-metno", "dep:ndarray"]
nwb = ["hdf5"]
# Phase 4.7 — DICOM Waveform read. Pure-Rust, no system deps.
dicom = ["archive", "dep:dicom-object", "dep:dicom-core"]
# Phase 6.2/6.3/6.7 — S3 read/write/ETag via aws-sdk-s3.
s3 = ["async", "dep:aws-config", "dep:aws-sdk-s3"]
ffi = ["host"]
wasm = ["std", "dep:wasm-bindgen"]
# ADR 0023 Track B5+: constriction-backed rANS/range/arithmetic coder.
# Runtime opt-in via LAMQUANT_TRY_ARITHMETIC=1.
experimental_arithmetic = ["host", "lamquant-lossless-core/experimental_arithmetic"]
# ADR 0024 Phase 4 — LSL CLI subcommands. Direct cyclic dep on
# `lamquant-lsl` (which depends on lamquant-core) is not possible.
# Phase 4 will land a separate `crates/lamquant-cli/` crate that
# depends on BOTH lamquant-core + lamquant-lsl and exposes the
# combined CLI. For now, LSL functionality is reached via:
#   * `cargo run -p lamquant-lsl --features liblsl --example replay_lml -- file.lml`
#   * The library API (`use lamquant_lsl::Outlet;`) for embedding.
# ADR 0023 Track B1: bit-packed-residual candidate. Activates the
# extra per-subband max_abs scan + bit_pack sizing + per-channel
# SubbandResult storage that adds 5-45% encode latency on
# multi-channel data. Off by default so the lossless codec hot
# path stays at pre-B1 throughput. Opt-in via this Cargo feature
# AND `LAMQUANT_TRY_BIT_PACK=1` at runtime.
experimental_bit_pack = ["host", "lamquant-lossless-core/experimental_bit_pack"]
experimental_basestation = ["host"]

[dependencies]
# Shared primitives extracted during decomposition (Phase 2). lamquant-core
# now re-exports `crc32` (and incrementally more) from this crate so both
# lossless and (future) neural codecs share the implementation.
lamquant-common = { version = "0.1.3", path = "../crates/lamquant-common", default-features = false }
# ADR 0052 Tier 1: the no_std integer LML codec. This facade re-exports its
# modules (lml, lpc, golomb, ...) under the stable `lamquant_core::*` paths.
# default-features = false so a no_std facade build stays no_std; the facade's
# own `std`/`archive`/`experimental_*` features turn on the matching core ones.
lamquant-lossless-core = { version = "0.9.3", path = "../lamquant-lossless-core", default-features = false }
# ADR 0052 Tier 3 / ADR 0054: the Optimum (LMO) codec. The facade IS the Desktop
# profile, so it links the LMO DECODER always (no_std-capable, cheap) and turns
# on the host LMO ENCODER under the facade's `archive` feature (which already
# pulls core's RD-search `archive` path that LMO encode needs). Re-exported as
# `lamquant_core::optimum`.
lamquant-optimum = { version = "0.0.1", path = "../lamquant-optimum", default-features = false, features = ["decode"] }
# Used by the facade's container/lma/security/config (SHA-256, base64).
sha2 = { version = "0.10", default-features = false }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# Shared op-runner contract — see specs/ui-parity.md and crates/lamquant-ops.
# Host feature only; firmware never spawns subprocesses.
lamquant-ops = { version = "0.1.0", path = "../../crates/lamquant-ops", optional = true }
# Shared history.json reader/writer — see specs/history-schema.json.
# Same `host`-only gate; firmware doesn't read user history.
lamquant-history = { version = "0.1.0", path = "../../crates/lamquant-history", optional = true }

# Host-only deps (gated by `host` feature).
clap = { version = "4", features = ["derive"], optional = true }
# Shell completion generator (Phase 1.8). Generates bash/zsh/fish/
# PowerShell/elvish completion scripts on demand via the
# `lml completions <shell>` subcommand.
clap_complete = { version = "4", optional = true }
# Man-page generator (Phase 1.9). Stable companion to clap_complete;
# same idiomatic pattern via `Cli::command()` → manpage roff.
clap_mangen = { version = "0.2", optional = true }
rayon = { version = "1", optional = true }
walkdir = { version = "2", optional = true }
zstd = { version = "0.13", optional = true }
# v1.2 I — `--include` / `--exclude` glob filters on encode + archive.
# Compiled pattern set; tar-style semantics; fast hit-test in the
# encoder loop. Host-only (no firmware use).
globset = { version = "0.4", optional = true }
tempfile = { version = "3", optional = true }
filetime = { version = "0.2", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.28", optional = true }
indicatif = { version = "0.17", optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
# YAML parsing for the PCCP registry (`pccp/registry.yaml`). Hand-rolled
# parser previously here was flagged in the V4 Pro review of the bones
# A+B+C commit — under FDA PCCP, registry interpretation must match the
# Python gate's PyYAML view byte-for-byte. host-only.
serde_yaml = { version = "0.9", optional = true }

# TUI widget ecosystem
throbber-widgets-tui = { version = "0.11", optional = true }
ratatui-textarea = { version = "0.8", features = ["crossterm"], optional = true }
tui-big-text = { version = "0.8", optional = true }
tui-scrollview = { version = "0.6", optional = true }
tui-tree-widget = { version = "0.24", optional = true }
tui-widget-list = { version = "0.15", optional = true }
tui-piechart = { version = "0.3", optional = true }

# Structured logging substrate (Phase 0.8). `tracing` is the abstract
# event emitter; `tracing-subscriber` configures filtering + format. The
# layered subscriber is initialised in `bin/lml.rs::main` so all crates
# that call `tracing::info!` / `warn!` / `error!` route through one
# pipeline. Phase 1.1 will migrate the bulk of existing `eprintln`s.
# Tighten the floor — `tracing-core` 0.1.30+ introduces `Collect`
# trait changes that older minor versions don't carry, and older
# `tracing-subscriber` builds against incompatible cores. Both crates
# are SemVer-disciplined; this floor avoids resolver picking ancient
# minor versions when other deps prefer them.
tracing = { version = "0.1.40", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }

# Bindings.
wasm-bindgen = { version = "0.2", optional = true }

# ─── Phase 7 — Security primitives (RustCrypto, pure-Rust) ───
# aes-gcm: AEAD encryption (confidentiality + authentication in one pass).
# Bundled in `host`; tiny footprint, no_std-compatible.
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "alloc"], optional = true }
# hmac: keyed message-authentication for archive signing. SHA-256 is
# already pulled in via the `sha2` dependency above.
hmac = { version = "0.12", default-features = false, optional = true }
# zeroize: clears key material from memory on drop. Tiny.
zeroize = { version = "1.7", default-features = false, features = ["zeroize_derive"], optional = true }
# v1.2 P — Argon2id KDF for `--password` flag. Pure Rust, audited
# RustCrypto crate. Derives a 32-byte AES-GCM key from a user-typed
# password using OWASP-recommended parameters (m=64 MiB, t=3, p=1).
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"], optional = true }
# v1.2 P — interactive password prompt without echo. Reads from
# /dev/tty when stdin is a pipe so the prompt still works in
# scripted contexts that pipe data through `lml encrypt`.
rpassword = { version = "7", optional = true }
# v1.2 P — cryptographically-secure random number generator for the
# 16-byte salt that the password KDF needs.
getrandom = { version = "0.2", optional = true }

# ─── Phase 6 — Async runtime + network (gated behind `async` feature) ───
# tokio: multi-threaded async runtime. The `rt-multi-thread` + `macros` +
# `fs` + `io-util` set is what the daemon / async wrappers need.
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "sync",
    "time",
    "signal",
], optional = true }
# reqwest: HTTP client for webhook callbacks + HTTP fetch source. Uses
# rustls (no system OpenSSL dep) so the static-musl release stays clean.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
], optional = true }
# notify: cross-platform filesystem watcher driving the `lml watch` daemon.
notify = { version = "6", default-features = false, features = [
    "macos_fsevent",
], optional = true }

# Phase 7.3 — OS keyring (feature `keyring`). Pulls in libsecret on
# Linux; Mac uses Security.framework, Windows uses DPAPI.
keyring = { version = "3", optional = true }
# Phase 5.4 — Parquet export. Adds the arrow-rs + parquet stack.
parquet = { version = "53", default-features = false, features = [
    "arrow",
    "snap",
], optional = true }
arrow-array = { version = "53", default-features = false, optional = true }
arrow-schema = { version = "53", default-features = false, optional = true }
# Phase 5.6 — HDF5 export. Static-link the system libhdf5 dev
# headers via the `static` feature when available.
hdf5-metno = { version = "0.12", optional = true }
ndarray = { version = "0.16", optional = true }
# Phase 4.7 — DICOM Waveform parsing (feature `dicom`).
dicom-object = { version = "0.8", optional = true }
dicom-core = { version = "0.8", optional = true }
# Phase 6.2 / 6.3 / 6.7 — AWS S3 SDK (feature `s3`). rustls TLS only.
aws-config = { version = "1", default-features = false, features = [
    "rustls",
    "behavior-version-latest",
], optional = true }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "rustls",
    "behavior-version-latest",
], optional = true }
# NOTE: the constriction + probability deps (and src/arithmetic.rs,
# src/arith_cat.rs) moved to `lamquant-lossless-core` with the codec split
# (ADR 0052). The facade reaches them via
# `experimental_arithmetic = ["lamquant-lossless-core/experimental_arithmetic"]`.
