[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lamquant-core"
version = "0.2.0"
description = "LML lossless EEG codec — Rust acceleration for lamquant-codec"
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}
keywords = ["eeg", "lossless", "compression", "codec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["python", "pyo3/extension-module"]
