[package]
name = "lamquant-py"
version = "0.9.3"
edition = "2021"
rust-version = "1.81"
authors = ["QuiteTall <briankhanglam@gmail.com>"]
description = "Python bindings for the LamQuant LML lossless EEG codec (PyO3 + maturin)."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Quitetall/LamQuant-Lossless"
homepage = "https://github.com/Quitetall/LamQuant-Lossless"
readme = "README.md"
keywords = ["eeg", "lossless", "codec", "python", "pyo3"]
categories = ["science", "encoding"]
publish = false

[lib]
name = "lamquant_core"
crate-type = ["cdylib"]

[dependencies]
lml = { package = "lamquant-lml", version = "0.9.3", path = "../lamquant-lossless", features = ["archive"] }
# ADR 0114 N2: the Neural Evidence Graph, exposed to Python as `PyNeg`. The
# crate is pyo3-free (rlib); the typed Python boundary lives in this handle.
lamquant-neg = { version = "0.1.0", path = "../crates/lamquant-neg" }
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
