[package]
name = "lamquant-abir-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
publish = false

[dependencies]
"legacy-abir" = { package = "abir", path = "../abir" }
"semantic-abir" = { package = "abir", git = "https://github.com/Quitetall/ABIR.git", rev = "8a83d70243d9c9c38edddb67ef57a13fb85efa2c", default-features = false, features = ["alloc"] }
blake3 = { version = "=1.5.5", default-features = false }
bytemuck = { version = "=1.25.0" }
