[package]
name = "lamquant-abir-bridge"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
publish = false

[dependencies]
"legacy-abir" = { package = "abir", path = "../abir" }
"semantic-abir" = { package = "abir", git = "https://github.com/Quitetall/ABIR.git", rev = "7be40e21621121492a996be71d9f9f0490a6efec", default-features = false, features = ["alloc"] }
blake3 = { version = "=1.5.5", default-features = false }
bytemuck = { version = "=1.25.0" }
