[package]
# ABIR — the Atomic Biosignal Intermediate Representation (ADR 0069). The
# foundational, modality-typed, no_std-first crate both LamQuant codecs depend
# DOWN on (graph: lamquant-common <- lamquant-abir <- {LML tiers, LMQ} <- py).
# S2a seeds it with the two self-contained codec-seam enums (Format/Mode); the
# typed IR atoms, width-typed columns, modality types, and the shared Codec
# trait land in later increments.
name = "lamquant-abir"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "ABIR — the Atomic Biosignal Intermediate Representation (ADR 0069): the foundational, modality-typed no_std codec currency + shared codec seam (Format/Mode now; the typed IR + Codec trait later). Both LamQuant codecs depend DOWN on it."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Quitetall/LamQuant-Lossless"

[lib]
name = "lamquant_abir"
crate-type = ["rlib"]

[features]
# `std` ON by default (mirrors lamquant-lml-mcu) so `cargo test`/`--workspace` build
# with a libtest harness; the no_std chain reaches abir via `default-features = false`
# (mcu's abir dep) and the riscv build uses `--no-default-features`.
default = ["std"]
# Host-side std: flips off `#![no_std]` and gates the `std::error::Error` impl on
# `CodecError`. The atoms + Format/Mode/Codec are `alloc`-only (no_std-clean).
std = []

[dependencies]
