[package]
name = "lamquant-common"
version = "0.1.3"
edition = "2021"
rust-version = "1.81"
description = "LamQuant Codec shared primitives CRC-32 (ISO 3309), path helpers, and non-EDF signal ingest shared by the LamQuant EEG codecs. no_std + alloc."
license = "AGPL-3.0-or-later"
repository = "https://github.com/Quitetall/LamQuant-Lossless"
homepage = "https://github.com/Quitetall/LamQuant-Lossless"
readme = "README.md"
categories = ["compression", "science"]
keywords = ["eeg", "edf", "biosignal"]

[lib]
name = "lamquant_common"
crate-type = ["rlib"]

[dependencies]
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }

[features]
default = []
# Enable Rust std library (host-side only).
std = []
# Host-side features: serde_json support for ingest, std::path for paths.
host = ["std", "dep:serde_json"]

[dev-dependencies]
tempfile = "3"
