[package]
name = "lamquant-history"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Shared history.json + resume-state reader/writer for LamQuant front-ends."
license = "AGPL-3.0"
repository = "https://github.com/openhuman-ai/LamQuant"

[lib]
name = "lamquant_history"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
