[package]
name = "lamquant-ops"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Shared op runner contract for LamQuant front-ends (Rust TUI, Tauri GUI, Python TUI)."
license = "GPL-3.0-or-later"
repository = "https://github.com/openhuman-ai/LamQuant"

[lib]
name = "lamquant_ops"
path = "src/lib.rs"

[dependencies]
# Tiny, dep-free JSON serializer for OpEvent line emission. Pulled from the
# host workspace so we don't add a new transitive dep.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"

[dev-dependencies]
# Schema parity test reads the canonical JSON Schema and validates a fixture.
jsonschema = { version = "0.30", default-features = false }
