[package]
name = "lamquant-standard-adapters"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
abir-adapter = { git = "https://github.com/Quitetall/ABIR.git", rev = "7be40e21621121492a996be71d9f9f0490a6efec" }
blake3 = "=1.5.5"
hdf5-metno = "0.12"
lamquant-abir-bridge = { path = "../lamquant-abir-bridge" }
lamquant-lml = { path = "../../lamquant-lossless", default-features = false, features = ["archive", "dicom", "nwb"] }
legacy-abir = { package = "abir", path = "../abir" }
semantic-abir = { package = "abir", git = "https://github.com/Quitetall/ABIR.git", rev = "7be40e21621121492a996be71d9f9f0490a6efec" }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
lamquant-common = { path = "../lamquant-common" }
