[package]
name = "lamquant-standard-adapters"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
abir-adapter = { git = "https://github.com/Quitetall/ABIR.git", rev = "c101513167ad8d7cdefa6387b20c644fdaf66432" }
blake3 = "=1.5.5"
# The first-class DICOM profile needs raw element access, not just the
# waveform reader the codec exposes.
dicom-core = "0.8"
# BIDS mandates gzipped continuous-recording tables.
flate2 = "1"
dicom-object = "0.8"
hdf5-metno = "0.12"
lamquant-lml = { path = "../../lamquant-lossless", default-features = false, features = ["archive", "dicom", "nwb"] }
semantic-abir = { package = "abir", git = "https://github.com/Quitetall/ABIR.git", rev = "c101513167ad8d7cdefa6387b20c644fdaf66432" }
serde_json = "1"
tempfile = "3"

[dev-dependencies]
lamquant-common = { path = "../lamquant-common" }
